# puddle

./: .gitignore  build.sh  pyproject.toml  requirements.txt  vercel.json
conversation/: forms.py  models.py  views.py
conversation/migrations/: 0001_initial.py
conversation/templates/conversation/: detail.html  inbox.html
core/: forms.py
core/templates/core/: base.html  index.html  login.html  signup.html
dashboard/templates/dashboard/: index.html
item/: forms.py  models.py  views.py
item/migrations/: 0001_initial.py  0002_alter_category_options_item.py
item/templates/item/: detail.html  form.html  items.html
puddle/: settings.py  urls.py  wsgi.py
