[tool.poetry]
name = "puddle"
version = "0.1.0"
description = ""
authors = ["Karim Tayie <karimsherif2597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
