[tool.poetry]
name = "puddle"
version = "0.1.0"
description = ""
authors = ["Karim Tayie <karimsherif2597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
pillow = "^9.5.0"
django-environ = "^0.10.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
django-storages = {extras = ["s3"], version = "^1.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
